--- a/package.json
+++ b/package.json
@@ -1,8 +1,12 @@
 {
   "name": "js-extensions",
-  "version": "1.0.0",
+  "version": "0.1.0",
   "description": "Set of common javascript extensions that I use",
   "main": "index.js",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/dfoverdx/-dfoverdx-js-extensions.git"
+  },
   "scripts": {
     "build": "npm run build-prod && npm run build-dev",
     "build-prod": "cross-env NODE_ENV=production rollup -c",
