--- a/package.json
+++ b/package.json
@@ -9,8 +9,8 @@
   },
   "scripts": {
     "build": "npm run build-prod && npm run build-dev",
-    "build-prod": "cross-env NODE_ENV=production rollup -c",
-    "build-dev": "cross-env NODE_ENV=development rollup -c",
+    "build-prod": "cross-env NODE_ENV=production webpack --mode production --progress --color",
+    "build-dev": "cross-env NODE_ENV=development webpack --mode development --progress --color",
     "test": "jest"
   },
   "author": "Jordan Hitch",
@@ -19,15 +19,17 @@
     "@babel/core": "^7.1.6",
     "@babel/polyfill": "^7.0.0",
     "@babel/preset-env": "^7.1.6",
+    "@babel/register": "^7.0.0",
     "babel-core": "^7.0.0-bridge.0",
     "babel-jest": "^23.6.0",
+    "babel-loader": "^8.0.4",
     "cross-env": "^5.2.0",
     "jest": "^23.6.0",
     "regenerator-runtime": "^0.13.1",
-    "rollup": "^0.67.3",
-    "rollup-plugin-babel": "^4.0.3",
-    "rollup-plugin-terser": "^3.0.0",
-    "terser": "^3.10.11"
+    "terser": "^3.10.11",
+    "terser-webpack-plugin": "^1.1.0",
+    "webpack": "^4.26.0",
+    "webpack-cli": "^3.1.2"
   },
   "jest": {
     "setupFiles": [
