--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@dfoverdx/js-extensions",
-  "version": "0.2.0",
+  "version": "0.2.1",
   "description": "Set of common javascript extensions that I use",
   "main": "index.js",
   "repository": {
@@ -8,9 +8,10 @@
     "url": "https://github.com/dfoverdx/-dfoverdx-js-extensions.git"
   },
   "scripts": {
-    "build": "npm run build-prod && npm run build-dev",
+    "build": "npm run gen-dts && npm run build-prod && npm run build-dev",
     "build-prod": "cross-env NODE_ENV=production webpack --mode production --progress --color",
     "build-dev": "cross-env NODE_ENV=development webpack --mode development --progress --color",
+    "gen-dts": "dts-generator --name js-extensions --project . --out index.d.ts",
     "test": "jest",
     "coverage": "jest --coverage"
   },
@@ -21,12 +22,13 @@
     "@babel/polyfill": "^7.0.0",
     "@babel/preset-env": "^7.1.6",
     "@babel/register": "^7.0.0",
-    "@types/node": "^10.12.10",
     "@types/jest": "^23.3.9",
+    "@types/node": "^10.12.10",
     "babel-core": "^7.0.0-bridge.0",
     "babel-jest": "^23.6.0",
     "babel-loader": "^8.0.4",
     "cross-env": "^5.2.0",
+    "dts-generator": "^2.1.0",
     "jest": "^23.6.0",
     "regenerator-runtime": "^0.13.1",
     "terser": "^3.10.11",
