--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@dfoverdx/js-extensions",
-  "version": "0.2.3",
+  "version": "0.2.4",
   "description": "Set of common javascript extensions that I use",
   "main": "index.js",
   "typings": "./lib/index.d.ts",
@@ -22,7 +22,8 @@
     "@babel/polyfill": "^7.0.0",
     "@babel/preset-env": "^7.1.6",
     "@babel/register": "^7.0.0",
-    "@types/jest": "^23.3.9",
+    "@types/jest": "^23.3.10",
+    "@types/jquery": "^3.3.22",
     "@types/node": "^10.12.10",
     "babel-core": "^7.0.0-bridge.0",
     "babel-jest": "^23.6.0",
@@ -34,7 +35,7 @@
     "terser-webpack-plugin": "^1.1.0",
     "ts-jest": "^23.10.4",
     "ts-loader": "^5.3.0",
-    "typescript": "^3.1.6",
+    "typescript": "^3.2.1",
     "webpack": "^4.26.0",
     "webpack-cli": "^3.1.2"
   },
